<resources>
    <string name="app_name">Lombok Destination</string>
    <string name="destination_name">Destinasi</string>
    <string name="overview">Deskripsi</string>
    <string name="more_info">Info Lainnya</string>
    <string name="profile">Profile</string>
    <string name="about_name">Maulana Muhammad</string>
    <string name="about_email">maulanamuhammad2000@gmail.com</string>

    <string name="location">Lokasi</string>
    <string name="coordinate">Koordinat</string>
    <string name="activity">Aktivitas</string>
    <string name="facility">Fasilitas</string>
    <string name="ticket">Tiket Masuk</string>
    <string name="time">Waktu Ideal</string>
    <string name="note">Catatan</string>

    <string-array name="destination_name">
        <item>Benang Kelambu</item>
        <item>Bukit Pegasingan</item>
        <item>Gili Air</item>
        <item>Gili Trawangan</item>
        <item>Gunung Rinjani</item>
        <item>Islamic Center</item>
        <item>Pantai Mawun</item>
        <item>Pusuk</item>
        <item>Sendang Gile</item>
        <item>Senggigi</item>
    </string-array>

    <string-array name="destination_overview">
        <item>Air terjun Belang Kelambu merupakan salah satu surga tersembunyi di Lombok yang menawarkan pemandangan air terjun bertingkat dengan aliran air yang lembut seperti kelambu. Terletak di kawasan hutan yang asri, tempat ini menjadi tujuan wisata yang sempurna bagi pecinta alam.</item>
        <item>Bukit Pegasingan adalah destinasi favorit para pendaki yang ingin menikmati keindahan matahari terbit dengan pemandangan Gunung Rinjani sebagai latar belakang. Bukit ini menawarkan panorama alam yang menakjubkan dengan hamparan sawah dan lembah hijau yang memanjakan mata.</item>
        <item>Gili Air adalah salah satu dari tiga pulau Gili yang terkenal di Lombok, menawarkan kombinasi sempurna antara pantai berpasir putih, air laut yang jernih, dan kehidupan bawah laut yang kaya. Tempat ini ideal untuk snorkeling, diving, atau sekadar bersantai di tepi pantai.</item>
        <item>Gili Trawangan dikenal sebagai pulau terbesar dan paling ramai di antara tiga Gili, menawarkan kehidupan malam yang meriah serta pantai yang indah. Wisatawan dapat menikmati aktivitas seperti snorkeling, diving, hingga bersepeda mengelilingi pulau.</item>
        <item>Gunung Rinjani merupakan gunung berapi aktif dan menjadi salah satu destinasi pendakian favorit di Indonesia. Dengan Danau Segara Anak yang berada di kawahnya, pendakian ke puncak Rinjani menawarkan pengalaman menantang sekaligus mempesona.</item>
        <item>Islamic Center Mataram adalah masjid terbesar di Lombok yang juga menjadi pusat kegiatan keagamaan dan budaya. Dengan arsitektur yang megah dan menara tinggi yang ikonik, tempat ini menjadi salah satu landmark penting di Lombok.</item>
        <item>Pantai Mawun menawarkan pemandangan pantai yang tenang dengan pasir putih yang lembut dan air laut berwarna biru toska. Terletak di Lombok Selatan, pantai ini cocok bagi mereka yang mencari ketenangan dan keindahan alam yang murni.</item>
        <item>Pusuk Pass adalah kawasan hutan di ketinggian dengan jalan berkelok yang menawarkan pemandangan hutan tropis dan udara segar. Tempat ini juga dikenal sebagai habitat monyet yang sering berinteraksi dengan wisatawan.</item>
        <item>Air Terjun Sendang Gile terletak di kawasan Taman Nasional Gunung Rinjani dan menjadi salah satu tempat wisata favorit bagi pendaki. Dengan aliran air yang deras dan suasana alam yang asri, Sendang Gile menawarkan pengalaman yang menyegarkan.</item>
        <item>Pantai Senggigi adalah salah satu pantai paling terkenal di Lombok, menawarkan pemandangan matahari terbenam yang indah dan garis pantai yang panjang. Selain berenang dan bersantai, wisatawan dapat menikmati kuliner lokal di sepanjang pantai.</item>
    </string-array>

    <integer-array name="destination_photo">
        <item>@drawable/benang_kelambu</item>
        <item>@drawable/bukit_pegasingan</item>
        <item>@drawable/gili_air</item>
        <item>@drawable/gili_trawangan</item>
        <item>@drawable/gunung_rinjani</item>
        <item>@drawable/islamic_center</item>
        <item>@drawable/pantai_mawun</item>
        <item>@drawable/pusuk</item>
        <item>@drawable/sendang_gile</item>
        <item>@drawable/senggigi</item>
    </integer-array>

    <string-array name="destination_title">
        <item>Belang Kelambu: Air Terjun Eksotis di Lombok</item>
        <item>Bukit Pegasingan: Spot Terbaik untuk Menikmati Sunrise</item>
        <item>Gili Air: Pulau Tropis dengan Pesona Bawah Laut</item>
        <item>Gili Trawangan: Pulau dengan Kehidupan Malam yang Hidup</item>
        <item>Gunung Rinjani: Tantangan Menaklukkan Gunung Tertinggi di Lombok</item>
        <item>Islamic Center Mataram: Ikon Keagamaan dan Budaya di Lombok</item>
        <item>Pantai Mawun: Keindahan Tersembunyi di Selatan Lombok</item>
        <item>Pusuk: Menikmati Keindahan Alam dan Udara Segar di Ketinggian</item>
        <item>Sendang Gile: Air Terjun Menakjubkan di Kaki Gunung Rinjani</item>
        <item>Senggigi: Destinasi Pantai Terkenal dengan Pesona Sunset</item>
    </string-array>

    <string-array name="destination_location">
        <item>Desa Benang Stokel, Kecamatan Batukliang Utara, Kabupaten Lombok Tengah</item>
        <item>Desa Sembalun, Kecamatan Sembalun, Kabupaten Lombok Timur</item>
        <item>Kepulauan Gili, Kabupaten Lombok Utara</item>
        <item>Kepulauan Gili, Kabupaten Lombok Utara</item>
        <item>Taman Nasional Gunung Rinjani, Kabupaten Lombok Utara</item>
        <item>Jalan Udayana, Kota Mataram, Lombok</item>
        <item>Desa Tumpak, Kecamatan Pujut, Kabupaten Lombok Tengah</item>
        <item>Pusuk Pass, perbatasan Lombok Barat dan Lombok Utara</item>
        <item>Desa Senaru, Kecamatan Bayan, Kabupaten Lombok Utara</item>
        <item>Kecamatan Batu Layar, Kabupaten Lombok Barat</item>
    </string-array>

    <string-array name="destination_coordinate">
        <item>-8.520093, 116.404448</item>
        <item>-8.401859, 116.552734</item>
        <item>-8.358225, 116.077352</item>
        <item>-8.350744, 116.041168</item>
        <item>-8.421931, 116.457157</item>
        <item>-8.583118, 116.112591</item>
        <item>-8.889087, 116.234589</item>
        <item>-8.462284, 116.197234</item>
        <item>-8.336478, 116.400780</item>
        <item>-8.477564, 116.045899</item>
    </string-array>

    <string-array name="destination_activity">
        <item>Trekking ringan, fotografi, berenang di kolam alami, menikmati pemandangan alam.</item>
        <item>Mendaki, berkemah, menikmati pemandangan, fotografi.</item>
        <item>Snorkeling, diving, berjemur, bersepeda keliling pulau.</item>
        <item>Snorkeling, diving, bersepeda, menikmati kehidupan malam.</item>
        <item>Pendakian, berkemah, melihat kawah, mandi air panas.</item>
        <item>Beribadah, wisata religi, menikmati arsitektur, naik ke menara untuk melihat pemandangan kota.</item>
        <item>Berenang, berjemur, berjalan di sepanjang pantai, fotografi.</item>
        <item>Menikmati pemandangan, berinteraksi dengan monyet, fotografi.</item>
        <item>Trekking ringan, fotografi, berenang di kolam air terjun.</item>
        <item>Berenang, snorkeling, bersantai di pantai, menikmati kuliner lokal.</item>
    </string-array>

    <string-array name="destination_facility">
        <item>Area parkir, toilet, gazebo untuk istirahat.</item>
        <item>Area parkir, tempat berkemah, pemandu lokal.</item>
        <item>Homestay, bungalow, resort, restoran, kafe.</item>
        <item>Resort, hotel, hostel, villa, restoran, bar.</item>
        <item>Basecamp, pemandu, porter, area berkemah.</item>
        <item>Area parkir, toilet, toko suvenir, ruang pertemuan.</item>
        <item>Warung kecil, penyewaan payung dan tikar, area parkir.</item>
        <item>Area parkir, warung makan, tempat istirahat.</item>
        <item>Area parkir, toilet, warung makan.</item>
        <item>Resort, hotel, homestay, restoran, kafe.</item>
    </string-array>

    <string-array name="destination_ticket">
        <item>Rp 10.000 per orang.</item>
        <item>Rp 15.000 per orang.</item>
        <item>Tidak ada tiket khusus; biaya transportasi dan akomodasi bervariasi.</item>
        <item>Tidak ada tiket khusus; biaya transportasi dan akomodasi bervariasi.</item>
        <item>Rp 150.000 untuk wisatawan domestik, Rp 300.000 untuk wisatawan asing.</item>
        <item>Gratis.</item>
        <item>Rp 5.000 per orang.</item>
        <item>Gratis.</item>
        <item>Rp 10.000 per orang.</item>
        <item>Gratis.</item>
    </string-array>

    <string-array name="destination_time">
        <item>Pagi hingga siang hari untuk menghindari keramaian.</item>
        <item>Pagi hari untuk menyaksikan matahari terbit.</item>
        <item>Sepanjang tahun, tetapi lebih baik di musim kemarau (April-September).</item>
        <item>Sepanjang tahun, tetapi lebih baik di musim kemarau (April-September).</item>
        <item>April hingga September (musim kemarau).</item>
        <item>Pagi atau sore hari.</item>
        <item>Sepanjang tahun, tetapi lebih baik di musim kemarau (April-September).</item>
        <item>Pagi atau sore hari.</item>
        <item>Pagi atau sore hari.</item>
        <item>Sepanjang tahun, tetapi lebih baik di musim kemarau (April-September).</item>
    </string-array>

    <string-array name="destination_note">
        <item>Siapkan fisik yang baik karena perjalanan menuju air terjun bisa menantang.</item>
        <item>Bawa pakaian hangat karena suhu bisa sangat dingin di pagi hari.</item>
        <item>Tidak ada kendaraan bermotor di pulau ini, transportasi utama adalah sepeda dan cidomo.</item>
        <item>Siapkan diri untuk menikmati malam panjang dengan berbagai pesta pantai.</item>
        <item>Bawa peralatan pendakian lengkap dan siapkan kondisi fisik sebelum mendaki.</item>
        <item>Pakaian sopan dan tertutup wajib dikenakan saat memasuki area masjid.</item>
        <item>Bawa makanan dan minuman sendiri karena fasilitas sangat terbatas.</item>
        <item>Jangan memberi makan monyet secara langsung untuk menghindari agresivitas.</item>
        <item>Gunakan alas kaki yang nyaman karena jalur menuju air terjun cukup licin.</item>
        <item>Pilih akomodasi dekat pantai untuk menikmati pemandangan matahari terbenam.</item>
    </string-array>

</resources>